--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,20 +14,24 @@
   }
 }
 :root {
-  /*   --swiper-theme-color: #d6985b; */
-  --swiper-navigation-size: 30px;
+  --swiper-theme-color: rgb(0, 105, 98);
+  --swiper-navigation-size: 15px;
 }
-/* .swiper-button-next,
-.swiper-container-rtl .swiper-button-prev {
-  padding: 5rem 2rem;
-  display: flex;
-  flex-wrap: wrap;
-  top: 0;
+.swiper-button-next,
+.swiper-container-rtl .swiper-button-prev,
+.swiper-button-prev,
+.swiper-container-rtl .swiper-button-next {
+  width: 20px;
+  height: 20px;
+  padding: 15px;
+  border: 3px solid;
+  border-radius: 50%;
+  top: 40%;
+  background-color: rgba(0, 255, 240, 1);
 }
 .swiper-button-next:hover,
 .swiper-container-rtl:hover .swiper-button-prev:hover {
-  background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: -2rem 0 1rem rgba(255, 255, 255, 0.8);
+  transform: scale(1.2, 1.2);
+  box-shadow: 0 0 2rem rgba(0, 255, 240, 1);
   transition: all 0.3s ease-in-out;
 }
- */
