add twitter card validator

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,9 +18,8 @@
   --swiper-navigation-size: 15px;
 }
 .swiper-button-next,
-.swiper-container-rtl .swiper-button-prev,
-.swiper-button-prev,
-.swiper-container-rtl .swiper-button-next {
+.swiper-container-rtl,
+.swiper-button-prev {
   width: 20px;
   height: 20px;
   padding: 15px;
@@ -30,7 +29,8 @@
   background-color: rgba(0, 255, 240, 1);
 }
 .swiper-button-next:hover,
-.swiper-container-rtl:hover .swiper-button-prev:hover {
+.swiper-container-rtl:hover,
+.swiper-button-prev:hover {
   transform: scale(1.2, 1.2);
   box-shadow: 0 0 2rem rgba(0, 255, 240, 1);
   transition: all 0.3s ease-in-out;
